--- a/product-preview-card-component-main/css/style.css
+++ b/product-preview-card-component-main/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.google.com/specimen/Montserrat');
+
+@import url('https://fonts.google.com/specimen/Fraunces');
 
 * {
 	margin: 0;
@@ -7,29 +10,31 @@
 }
 
 body {
-	background-color: hsl(30, 38%, 92%);
-	margin: 0 auto;
 	font-size: 14px;
+	max-width: 1140px;
 }
 
 .container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: hsl(0, 0%, 100%);
-	border-radius: 8px;
-	width: 380px;
+	background-color: hsl(30, 38%, 92%);
+	display: grid;
+	place-items: center;
+	height: 80vh;
+}
+
+.container .center {
+	width: 300px;
+	height: 212px;
 }
 
 .two-col {
+	display: flex;
 	float: left;
 	width: 50%;
+	height: 100%;
 }
 
 #desktop-img {
 	width: 100%;
-	height: 240px;
 	border-top-left-radius: 8px;
 	border-bottom-left-radius: 8px;
 }
@@ -38,45 +43,162 @@ body {
 	display: none;
 }
 
-#product-info {
-	margin-top: 10px;
-	padding: 2%;
+#banner {
+	padding: 5%;
 }
 
-#product-name, #product-details, span {
+#product-name, #product-details, #price p {
 	color: hsl(228, 12%, 48%);
+}
+
+#product-name {
+	font-size: 10px;
+	letter-spacing: .1rem;
 }
 
 #product-slogan h1 {
 	color: hsl(212, 21%, 14%);
-	line-height: 0.8;
+	line-height: 1;
+	font-size: 18px;
+	margin: 10px 0;
+}
+
+#product-details {
+	font-size: 9px;
+	word-spacing: 1.5px;
+}
+
+#price {
+	display: flex;
+	float: left;
+	margin: 10px 0;
 }
 
 #price h2 {
 	color: hsl(158, 36%, 37%);
+	font-size: 16px;
+	letter-spacing: .1rem;
 }
 
-#price span {
+#price p {
 	margin-left: 6px;
-	font-size: 14px;
+	font-size: 10px;
 }
 
 #add-cart button {
+	display: flex;
+	float: left;
 	background-color: hsl(158, 36%, 37%);
 	width: 100%;
-	padding: 5px 10px;
-	margin-bottom: 10px;
+	height: 20px;
+	padding: 5px 30%;
 	border-radius: 4px;
 	color: #fff;
+	font-size: 6px;
+
+}
+
+#cart-icon {
+	width: 8px;
+	margin-right: 5px;
 }
 
 #add-cart button:hover {
 	background-color: hsl(158, 95%, 15%);
 }
 
-#cart-icon {
-	margin-right: 5px;
+@media screen and (max-width: 375px) {
+	
+	.container {
+		display: block;
+		height: 100vh;
+		place-items: center;
+	}
+
+	.center {
+		width: 280px;
+		padding: 4%;
+		margin: 0 auto;
+	}
+
+	#mobile-img {
+		display: block;
+		width: 100%;
+		border-top-left-radius: 8px;
+		border-top-right-radius: 8px;
+	}
+
+	#desktop-img {
+		display: none;
+	}
+
+	.two-col {
+		width: 100%;
+	}
+
+	#product-name {
+		font-size: 12px;
+		letter-spacing: .2rem;
+	}
+	
+	#product-slogan h1 {
+		font-size: 30px;
+		font-weight: 700;
+	}
+	
+	#product-details {
+		font-size: 15px;
+		word-spacing: 1.5px;
+		line-height: 18px;
+	}
+	
+	#price {
+		display: flex;
+		float: left;
+		margin: 15px 0;
+	}
+	
+	#price h2 {
+		color: hsl(158, 36%, 37%);
+		font-size: 25px;
+		letter-spacing: .1rem;
+	}
+	
+	#price p {
+		margin-left: 8px;
+		font-size: 12px;
+	}
+	
+	#add-cart button {
+		height: 30px;
+		place-items: center;
+		font-size: 14px;
+		font-weight: 700;
+		margin-bottom: 100px;
+	}
+	
+	#add-cart img {
+		width: 14px;
+		margin-right: 7px;
+	}
+
+	.attribution {
+		width: 80%;
+		font-size: 6px;
+		margin: 130px auto;
+	}
+
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+	font-size: 11px;
+	text-align: center;
+	width: 30%;
+	background-color: rgb(199, 186, 186);
+	padding: 20px 0;
+	margin: -50px auto;
+}
+
+.attribution a {
+	color: hsl(228, 45%, 44%);
+}
